# rs-user-api

./: Cargo.toml  README.md  docker-compose.yml
src/: config.rs  lib.rs  main.rs
src/adapter/: user_controller.rs
src/adapter/controller/: user_controller.rs
src/adapter/database/: config.rs
src/application/: crypto_service.rs  user_service.rs
src/domain/entity/: user.rs
src/domain/repository/: user_repository.rs
src/infrastructure/: user_repository.rs
