[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tracing-subscriber = "0.3.18"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls", "postgres" ] }
dotenv = "0.15"
async-trait = "0.1.58"